# DiffusionClassifier

./: .gitignore  CLAUDE.md  README.md  conf_bbbc_dino_eval.sh  conf_bbbc_eval.sh  conf_dino_eval.sh  config.yaml  diff_bbbc_eval.sh  diff_bray_cloome_eval.sh  launch_sweeps.py  launch_sweeps.sh  launch_sweeps_dino.sh  launch_sweeps_dino_top_3.sh  launch_sweeps_top_3.sh  launch_sweeps_top_3_mlp.sh  pyproject.toml  run_conf_bbbc.sh  run_conf_bray.sh  run_diff_bbbc.sh  run_diff_bray.sh  run_diff_bray_cloome.sh  run_diff_bray_dino.sh  run_eval_conformal.sh  run_eval_conformal_cloome.sh  run_eval_conformal_dino.sh  run_eval_diffusion.sh  run_eval_diffusion_cloome.sh  run_eval_diffusion_dino.sh  run_grid_search_bbbc.sh  run_grid_search_cloome.sh  run_grid_search_cp.sh  run_grid_search_diffusion_bbbc.sh  run_grid_search_diffusion_bbbc_cloome.sh  run_grid_search_diffusion_bbbc_dino.sh  run_grid_search_diffusion_cloome.sh  run_grid_search_diffusion_cp.sh  run_grid_search_diffusion_dino.sh  run_grid_search_dino.sh  setup.cfg  sweeps.yaml
_generate_mnist/: generate_2_digit_mnist.py  generate_2_occluded_digit_mnist.py  generate_occluded_1_digit_mnist.py  generate_occluded_1_digit_mnist_one_hot.py  generate_occluded_masked_2_digit_mnist.py
configs/: conformal_bbbc_cloome_plg.yaml  conformal_bbbc_dino.yaml  conformal_bbbc_dino_plg.yaml  conformal_bbbc_plg.yaml  conformal_bray.yaml  conformal_bray_cloome.yaml  conformal_bray_cloome_plg.yaml  conformal_bray_dino.yaml  conformal_bray_dino_plg.yaml  conformal_bray_md_plg.yaml  conformal_bray_plg.yaml  diffusion_bbbc.yaml  diffusion_bbbc_cloome.yaml  diffusion_bbbc_cloome_plg.yaml  diffusion_bbbc_dino.yaml  diffusion_bbbc_dino_plg.yaml  diffusion_bbbc_plg.yaml  diffusion_bray.yaml  (+6 more)
(+135 files in other folders)
