[project]
name = "diffusionclassifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.37.1",
    "jsonargparse>=4.27.7",
    "lightning>=2.6.1",
    "matplotlib>=3.10.8",
    "polars>=1.39.3",
    "pytorch-lightning>=2.6.1",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["scripts*", "_data*", "_generate_mnist*"]

[dependency-groups]
dev = [
    "marimo>=0.21.1",
    "ipykernel>=7.2.0",
]
